--- a/style.css
+++ b/style.css
@@ -1,41 +1,221 @@
-body {
-  margin: 0;
-  font-family: "Montserrat", sans-serif;
-  background-color: rgb(238, 204, 204);
-  background-image: url(./background.jpg);
-  background-size: 100% 20%;
-  background-repeat: no-repeat;
-}
-.header {
-  font-size: 22px;
+* {
+  box-sizing: border-box;
 }
 
-.header-1 {
-  color: rgb(243, 203, 151);
-  font-size: 64px;
-  margin-left: 650px;
-  margin-bottom: -20px;
-  margin-top: 210px;
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  margin: 0;
+  font-family: "Seymour One", sans-serif;
+  font-weight: bold;
+  font-size: x-large;
 }
 p {
-  margin-left: 750px;
-  margin-bottom: 125px;
-  color: #c04728;
-  font-weight: bolder;
+  font-family: "Roboto", sans-serif;
+  font-weight: normal;
+  font: smaller;
+  color: #000000;
 }
-.header-2 {
+
+.section {
+  width: 100vw; /* 100% == 100vw vieport width */
+  max-width: 100%; /* hack for 100vw */
+  height: 100vh; /* VH = viewport height */
+  padding-top: 10px;
+  text-align: left;
+}
+
+.section-about {
+  background: linear-gradient(180deg, #f3a3e0 0%, #fff8ff 100%);
+}
+.section-portfolio {
+  background: linear-gradient(180deg, #fff8ff 0%, #f8dcf8 100%);
+}
+.section-contacts {
+  background: linear-gradient(180deg, #f8dcf8 0%, #f8c3f8 100%);
+  width: 100vw; /* 100% == 100vw vieport width */
+  max-width: 100%; /* hack for 100vw */
+  padding: 10px 0px 30px 0px;
+  margin: 0 auto;
+  flex-wrap: wrap;
+  position: absolute;
+  height: min-content;
+}
+
+.header {
+  background-color: #000000;
+
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+}
+
+.header .wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header .wrapper,
+.section .wrapper,
+.contacts .wrapper {
+  width: 960px;
+  margin: 0 auto;
+}
+
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  text-decoration: none;
+  font-family: "Seymour One", sans-serif;
+  font-weight: bold;
+}
+
+.menu {
+  width: 75%;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: space-around;
+  font-family: "Seymour One", sans-serif;
+  font-weight: bold;
+}
+
+.menu li {
+  width: 100%;
+}
+
+.menu a {
+  color: #f8c3f8;
+  font-size: 16px;
+  line-height: 60px;
+  padding: 0 8px;
+  display: block;
+  text-decoration: none;
+  width: 100%;
+  text-align: center;
+}
+
+.menu a:hover {
+  background-color: #ffffff;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+.gallery--item {
+  width: 32%;
+}
+.gallery--item img {
+  width: 100%;
+  display: block;
+}
+
+.section-about .wrapper {
+  padding-top: 60px;
+  display: flex;
+  height: 100%;
+}
+
+.about__col__left {
+  width: 50%;
+
+  display: flex;
+  align-items: center;
+}
+
+.about__col__left_wrapper {
+  padding: 20px;
+}
+
+.about__col__right {
+  width: 50%;
+  display: flex;
+  align-items: center;
+}
+
+.about__col__right_image {
+  padding-left: 40px;
+}
+.about__col__right_image img {
+  max-width: 100%;
+}
+
+.section-sonya {
+  padding-top: 60px;
+}
+
+.section-sonya .gallery-row {
+  display: flex;
+}
+
+.section-sonya .gallery-column-left,
+.section-sonya .gallery-column-right {
+  width: 20%;
+}
+
+.section-sonya .gallery-column-left {
+  background-color: aquamarine;
+}
+
+.gallery-column-right {
+  background-color: cyan;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.gallery-column-right-1 {
+  background-color: green;
+}
+.gallery-column-right-2 {
+  background-color: orange;
+}
+
+.image img {
+  max-width: 100%;
+}
+.contact-link {
+  color: black;
+  font-family: serif;
+}
+.social-href {
+  color: black;
+  font-family: serif;
+  margin-left: 0px;
+}
+.flex {
+  display: flex;
+  flex-direction: row;
+  margin-top: 30px;
+  align-items: left;
+  justify-content: left;
+}
+.flex a {
+  display: inline-block;
+}
+
+.teleg {
+  margin-right: 20px;
+}
+
+.olesia {
+  margin-top: 10px;
+}
+.to-top {
   color: rgb(255, 255, 255);
-  margin-left: 25px;
-  font-size: 30px;
 }
-ul {
-  color: #c04728;
-}
-.header-3 {
-  margin-left: 25px;
-  color: rgb(255, 255, 255);
-  font-size: 30px;
-}
-ol {
-  color: #c04728;
+
+.underline {
+  text-decoration: none;
+  color: black;
+  font-family: serif;
 }
